--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "fs-extra": "^5.0.0",
+    "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.1"
   }
