--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@tensorflow/tfjs": "^0.10.3",
     "axios": "^0.18.0",
     "fs-extra": "^5.0.0",
+    "google-cloud": "^0.57.0",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.10",
-    "moment": "^2.22.1"
+    "moment": "^2.22.1",
+    "sequelize": "^4.37.6",
+    "sqlite3": "^4.0.0",
+    "string-to-stream": "^1.1.1"
   }
 }
