--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.1",
+    "promise-queue": "^2.2.5",
     "sequelize": "^4.37.6",
     "sqlite3": "^4.0.0",
     "string-to-stream": "^1.1.1"
