--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Ray Sakai",
   "license": "UNLICENSED",
   "private": true,
+  "scripts": {
+    "lint": "eslint *.js"
+  },
   "dependencies": {
     "@tensorflow/tfjs": "^0.10.3",
     "axios": "^0.18.0",
@@ -18,5 +21,8 @@
     "sequelize": "^4.37.6",
     "sqlite3": "^4.0.0",
     "string-to-stream": "^1.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1"
   }
 }
