--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "promise-queue": "^2.2.5",
     "sequelize": "^4.37.6",
     "sqlite3": "^4.0.0",
-    "string-to-stream": "^1.1.1"
+    "string-to-stream": "^1.1.1",
+    "yargs": "^11.0.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1"
