making a real order to BF

--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "predict": "parcel web/index.html -d public",
-    "import": "node import",
-    "mark-future": "node mark-future",
-    "mkfeed": "node mkfeed",
-    "train": "python3 train.py",
+    "combo": "node import && node mark-future && node mkfeed && python train.py",
     "convert2js": "tensorflowjs_converter --input_format keras models/model.h5 jsmodel",
     "lint": "eslint *.js"
   },
